src/test/deca/syntax/invalid/decl_method/test_decl_method_without_braces.deca
// Description:
//    Programme minimaliste creant une classe
//
// Resultats:
// mismatched input '}' expecting {'asm', '{'}
// Historique:
//    cree le 01/01/2024

class A {   
    int a;

    int setA (int a) 
}
